# nats-tg

./: .gitignore  README.md  TODO.md  Taskfile.yml  nats.yaml
messages/commands/: account-deleted.schema.json  create-account.schema.json  limit-changed.schema.json  money-deposited.schema.json  money-withdrawn.schema.json
messages/errors/: command-rejected.schema.json
messages/events/: account-created.schema.json  account-deleted.schema.json  limit-changed.schema.json  money-deposited.schema.json  money-withdrawn.schema.json
nest-service/: package-lock.json  package.json
nest-service/src/: app.module.ts
nest-service/src/users/: users.controller.spec.ts  users.controller.ts
python/: pyproject.toml
python/src/: main.py
typescript/account-service/: index.ts
typescript/accounts-service/: accounts-service.ts  index.ts  model.ts  package-lock.json  package.json  schemas.ts
users-frontend/: pyproject.toml
users-frontend/src/: main.py
users-service/: .gitignore  package-lock.json  package.json
users-service/src/: main.ts
users-service/src/users/: commands.ts  events.ts
